--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="msapplication-TileColor" content="#FFFFFF">
   <meta name="zfz-admin" content="考务系统后台管理" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>题库系统后台管理</title>
+  <title>主控台</title>
 </head>
 
 <body>
